plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.1'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'net.ltgt.errorprone' version '4.2.0' // https://github.com/tbroyer/gradle-errorprone-plugin
}

group = 'se.magnus.sb4labs'
version = '0.0.1-SNAPSHOT'
description = 'Lab project for Spring Boot 4'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

ext {
    springCloudVersion = '2025.1.0'
}

repositories {
    mavenCentral()
}

dependencies {
    errorprone 'com.uber.nullaway:nullaway:0.12.7' // https://github.com/uber/NullAway
    errorprone 'com.google.errorprone:error_prone_core:2.38.0' // https://github.com/google/error-prone

    implementation project(':api-definitions')
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-restclient'
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-opentelemetry'
    implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-resilience4j'
    implementation 'io.netty:netty-resolver-dns-native-macos::osx-aarch_64'

    testImplementation 'org.springframework.boot:spring-boot-starter-actuator-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-restclient-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    developmentOnly 'org.springframework.boot:spring-boot-devtools'
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
    }
}

tasks.withType(JavaCompile).configureEach {
    options.errorprone {
        disableAllChecks = true // Other error prone checks are disabled
        option("NullAway:OnlyNullMarked", "true") // Enable nullness checks only in null-marked code
        error("NullAway") // bump checks from warnings (default) to errors
    }
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.withType(JavaCompile) {
    options.compilerArgs += '--enable-preview'
}

tasks.withType(Test) {
    jvmArgs += '--enable-preview'
}

tasks.named('bootBuildImage') {
    imageName = "sb4labs/api-consumer"
    createdDate = "now"
    environment = [
        BPE_DELIM_JAVA_TOOL_OPTIONS: " ",
        BPE_APPEND_JAVA_TOOL_OPTIONS: "--enable-preview --enable-native-access=ALL-UNNAMED",
        BP_JVM_AOTCACHE_ENABLED: "true"
    ]
}

tasks.named("bootRun") {
    jvmArgs = [
        "--enable-preview",
        "--enable-native-access=ALL-UNNAMED"
    ]
}